--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="#" class="logo">
+                    <img class="logo__img" src="images/logo.jpg" alt="logo">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a class="menu__link" href="">Описание</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="">Характеристики</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="">стоимость</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
