--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -68,27 +69,29 @@
                     </div>
                     <ul class="bike__list">
                         <li class="bike__list-item">
-                            до 100 км
-                            <span>Запас хода</span> 
+                            <span class="bike__list-number">до 100 км</span>
+                            <span class="bike__list-text">Запас хода</span> 
                         </li>
                         <li class="bike__list-item">
-                            25 км/ч
-                            <span>Макс скорость</span> 
+                            <span class="bike__list-number">25 км/ч</span>
+                            <span class="bike__list-text">Макс скорость</span> 
                         </li>
                         <li class="bike__list-item">
-                            3 режима езды
-                            <span>механический, гибридный, электрический</span> 
+                            <span class="bike__list-number">3 режима езды</span>
+                            <span class="bike__list-text">механический, гибридный, электрический</span> 
                         </li>
                         <li class="bike__list-item">
-                            25 кг
-                            <span>вес</span> 
+                            <span class="bike__list-number">25 кг</span>
+                            <span class="bike__list-text">вес</span> 
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
