--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
     <section class="characteristics">
         <div class="container">
-            <h4 class="characteristics__title">
+            <h4 class="characteristics__head">
                 Характеристики    
             </h4>
             <div class="characteristics__inner">
