--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             Вся информация на ЖК-дисплее
                         </h4>
                         <p class="info__item-text">
-                            Вся информация на ЖК-дисплее 
+                            Вся информация на ЖК-дисплее
                             Большой информативный дисплей, вынесенный на рулевую стойку, отображает всю важную
                             информацию о работе HIMO C26 в реальном времени. Вы сможете узнать актуальную скорость
                             передвижения, уровень заряда или пройденный путь. Дисплей защищен от воздействия внешних
@@ -168,7 +168,7 @@
     <section class="characteristics">
         <div class="container">
             <h4 class="characteristics__head">
-                Характеристики    
+                Характеристики
             </h4>
             <div class="characteristics__inner">
                 <div class="characteristics__items">
@@ -223,7 +223,7 @@
                         </li>
                         <li class="characteristics__line">
                             <p class="characteristics__name">
-                                Вилка 
+                                Вилка
                             </p>
                             <p class="characteristics__descr">
                                 пружинно-эластомерная
@@ -321,7 +321,7 @@
                                 Готовность к установке дисковых
                             </p>
                             <p class="characteristics__descr">
-                                рама, вилка, втулка 
+                                рама, вилка, втулка
                             </p>
                         </li>
                     </ul>
@@ -366,6 +366,55 @@
             </div>
         </div>
     </div>
+    <section class="price">
+        <div class="container">
+            <div class="price__inner">
+                <form class="form">
+                    <h4 class="form__title">
+                        Заказать
+                    </h4>
+                    <p class="form__text">
+                        Если Вы хотите заказать велосипед, оставьте свой контакт и наш менеджер перезвонит вам в
+                        ближайшее время
+                    </p>
+                    <input class="form__input-name" type="text" placeholder="имя">
+                    <input class="form__input-phone" type="tel" placeholder="телефон">
+                    <p class="form__text">
+                        выберите желаемый цвет
+                    </p>
+                    <div class="form__label-box">
+                        <label class="form__label">
+                            <input  class="form__input-radio" type="radio">
+                            <div class="form__bike">
+                                <img class="form__bike__img" src="images/bike-grey.jpg" alt="">
+                                <p class="form__bike-price">33999 грн.</p>
+                            </div>
+                            <div class="form__radio-style form__radio-style--grey"></div>
+                        </label>
+                        <label class="form__label">
+                            <input  class="form__input-radio" type="radio">
+                            <div class="form__bike">
+                                <img class="form__bike__img" src="images/bike-white.jpg" alt="">
+                                <p class="form__bike-price">32999 грн.</p>
+                            </div>
+                            <div class="form__radio-style form__radio-style--white"></div>
+                        </label>
+                        <label class="form__label">
+                            <input  class="form__input-radio" type="radio">
+                            <div class="form__bike">
+                                <img class="form__bike__img" src="images/bike-red.jpg" alt="">
+                                <p class="form__bike-price">35999 грн.</p>
+                            </div>
+                            <div class="form__radio-style form__radio-style--red"></div>
+                        </label>
+                    </div>
+                    <button class="form__btn" type="submit">
+                        ЗАКАЗАТЬ
+                    </button>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
