--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a class="menu__link" href="">Описание</a>
+                            <a class="menu__link" href="#info">Описание</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="">Характеристики</a>
+                            <a class="menu__link" href="#characteristics">Характеристики</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="">стоимость</a>
+                            <a class="menu__link" href="#price">стоимость</a>
                         </li>
                     </ul>
                 </nav>
@@ -56,7 +56,7 @@
                         с пневматическими шинами, дисковые тормоза, 7-скоростная трансмиссия и эргономичное сидение
                         делают каждую поездку гораздо приятнее.
                     </p>
-                    <a class="bike__link" href="#">
+                    <a class="bike__link" href="#price">
                         ЗАКАЗАТЬ
                     </a>
                 </div>
@@ -89,7 +89,7 @@
             </div>
         </div>
     </section>
-    <section class="info">
+    <section class="info" id="info">
         <div class="container">
             <div class="info__inner">
                 <img class="info__img" src="images/info-img.jpg" alt="">
@@ -165,7 +165,7 @@
             </div>
         </div>
     </section>
-    <section class="characteristics">
+    <section class="characteristics" id="characteristics">
         <div class="container">
             <h4 class="characteristics__head">
                 Характеристики
@@ -366,7 +366,7 @@
             </div>
         </div>
     </div>
-    <section class="price">
+    <section class="price" id="price">
         <div class="container">
             <div class="price__inner">
                 <form class="form">
