--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         <label class="form__label">
                             <input  class="form__input-radio" type="radio" name="radio">
                             <div class="form__bike">
-                                <img class="form__bike__img" src="images/bike-grey.jpg" alt="">
+                                <img class="form__bike-img" src="images/bike-grey.jpg" alt="">
                                 <p class="form__bike-price"><span>33999 грн.</span></p>
                             </div>
                             <div class="form__radio-style form__radio-style--grey"></div>
@@ -394,7 +394,7 @@
                         <label class="form__label">
                             <input  class="form__input-radio" type="radio" name="radio" checked>
                             <div class="form__bike">
-                                <img class="form__bike__img" src="images/bike-white.jpg" alt="">
+                                <img class="form__bike-img" src="images/bike-white.jpg" alt="">
                                 <p class="form__bike-price"><span>32999 грн.</span></p>
                             </div>
                             <div class="form__radio-style form__radio-style--white"></div>
@@ -402,7 +402,7 @@
                         <label class="form__label">
                             <input  class="form__input-radio" type="radio" name="radio">
                             <div class="form__bike">
-                                <img class="form__bike__img" src="images/bike-red.jpg" alt="">
+                                <img class="form__bike-img" src="images/bike-red.jpg" alt="">
                                 <p class="form__bike-price"><span>35999 грн.</span></p>
                             </div>
                             <div class="form__radio-style form__radio-style--red"></div>
